--- a/app/src/main/res/layout-land/fragment_recipe_step.xml
+++ b/app/src/main/res/layout-land/fragment_recipe_step.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -13,7 +14,9 @@
         android:id="@+id/recipe_step_pv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/white">
+        android:background="@android:color/white"
+        app:rewind_increment="1000"
+        app:fastforward_increment="1000">
 
     </com.google.android.exoplayer2.ui.PlayerView>
 
