--- a/app/src/main/res/layout-sw600dp-land/fragment_recipe_step.xml
+++ b/app/src/main/res/layout-sw600dp-land/fragment_recipe_step.xml
@@ -17,7 +17,9 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:rewind_increment="1000"
+        app:fastforward_increment="1000" />
 
     <TextView
         android:id="@+id/recipe_step_tv"
